prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: prometheus.*
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 8080
        path: /
